fix: fixing some layout issues at home page

--- a/app/assets/stylesheets/pages/_about.scss
+++ b/app/assets/stylesheets/pages/_about.scss
@@ -5,7 +5,8 @@
 h1 {
   font-family: 'Varela Round', sans-serif;
   font-size: 45 ;
-  color: #00adb5;
+  //color: #00adb5;
+  color: #FF5757
 }
 
 h2 {
